# hilbert

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.txt  default.nix  flake.nix  vcpkg-configuration.json  vcpkg.json
apps/: CMakeLists.txt
apps/hilbert-cli/: CMakeLists.txt
apps/hilbert-cli/include/: chirp.hpp  state.hpp
apps/hilbert-cli/src/: main.cpp
lib/include/hilbert/: hilbert.hpp
nix/: plotter.nix
octave/: perform_hilbert.m  plot_car_signal_data.m  plot_car_simulation.m  plot_hilbert_example.m
python/: pyproject.toml
python/plotter/: __main__.py  main.py
python/plotter/cli/: cli.py
python/plotter/cli/commands/: cli_cmds.py
python/plotter/services/: plotting.py
sources/: CMakeLists.txt
sources/apps/hilbert-cli/: CMakeLists.txt
sources/apps/hilbert-cli/include/: chirp.hpp  collectors.hpp  derivative.hpp  print_utils.hpp  rk4.hpp  state.hpp
sources/apps/hilbert-cli/src/: chirp.cpp  collectors.cpp  main.cpp
sources/hilbert/: CMakeLists.txt
sources/hilbert/include/hilbert/: fft.hpp  hilbert.hpp
sources/hilbert/src/: fft.cpp  hilbert.cpp
