[project]
name = "plotter"
version = "0.1.0"
description = "Hilbert data plotter"
dependencies = [
    "typer",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "scipy>=1.15.1",
]
requires-python = ">=3.10"

[project.scripts]
plotter = "plotter.main:run_cli"

[build-system]
requires = [ "pdm-backend" ]
build-backend = "pdm.backend"